--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
@@ -47,7 +47,7 @@
                         <h:outputText value="#{treeItem.getNameEndElipse()}" title="#{treeItem.name}"/>
                     </p:treeNode>
 
-                    <p:treeNode type="tree" icon="#{treeItem.iconTree}">
+                    <p:treeNode type="tree" icon="#{treeItem.iconTree}" styleClass="dragable">
                         <h:outputText value="#{treeItem.getNameEndElipse()}" title="#{treeItem.name}"/>
                     </p:treeNode>
 
